<resources>
    <string name="app_name">Tradify</string>
    <string name="header_signin">Selamat Datang !</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="ingatkan_saya">Ingatkan Saya</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="Daftar">Daftar</string>
    <string name="Password">Password</string>
    <string name="header_signup">Daftar</string>
    <string name="desct_signup">Untuk Memulai</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="masukkan_telp">Masukkan nomor telepon</string>
    <string name="desc_forgot_pw">Silahkan Masukkan Alamat Email Untuk Menerima Kode Verifikasi</string>
    <string name="search_home">Mau makan apa hari ini ?</string>
    <string name="riwayat_scan">Riwayat Scan</string>
    <string name="nama_produk">Brem Suling Mas</string>
    <string name="kategori_produk">Olahan Daging</string>
    <string name="harga_produk">Rp.20.000</string>
    <string name="food_categories">Kategori</string>
    <string name="see_all">Lihat semua</string>
    <string name="txt_category">Aneka Kue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profil">Profil</string>
    <string name="halo">Halo!</string>
    <string name="namaUser">Nama User</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="log_out">Log Out</string>
    <string name="emailUser">Email User</string>
    <string name="jelajahi">Jelajahi</string>
    <string name="tv_nama_makanan">Nama Makanan</string>
    <string name="tv_ringkas_detail_makanan">Ringkasan Makanan</string>
    <string name="btn_baca">Baca Lebih Detail</string>
    <string name="btn_keluar">Keluar</string>
    <string name="tv_detail_makanan">Detail Makanan</string>
    <string name="tv_asal_makanan">Asal Daerah</string>
    <string name="tv_kategori_makanan">Kategori Makanan</string>
    <string name="tv_kategori_detail">Kategori :</string>
    <string name="tv_asal_detail">Asal Daerah :</string>
    <string name="scan_makanan">Scan Makanan</string>
    <string name="deskripsi_scan">Foto makananmu di posisi tengah</string>
    <string name="galeri">Galeri</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="detail_makanan">Detail Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
</resources>